<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:layout_margin="@dimen/margin_regular">

    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        tools:text="@string/my_device_name"
        android:textSize="@dimen/text_size_large"
        android:textColor="#000"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dummy_mac_address"
        android:textSize="@dimen/text_size_small"
        android:textColor="#000"
        android:layout_below="@+id/device_name"
        android:layout_marginTop="@dimen/margin_small"/>


    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/device_address"


        >

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/connectBtn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:minHeight="@dimen/button_min_height"-->
<!--            android:layout_below="@+id/device_address"-->
<!--            android:text="@string/text_connect"/>-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/button_min_height"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/bt_pair"
            android:soundEffectsEnabled="true"
            android:text="@string/text_pair"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/bt_pair" />

    </androidx.appcompat.widget.LinearLayoutCompat>




</RelativeLayout>