<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".bluetooth.DeviceListActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <RelativeLayout
        android:id="@+id/Rel1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F3F3F3"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/btConditionImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/bt_off" />

        <TextView
            android:id="@+id/btContionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/btConditionImage"
            android:text="@string/bt_condition_text_off"
            android:textColor="#000"
            android:textSize="18sp" />
<LinearLayout

    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_width="60dp"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.SwitchCompat

        android:id="@+id/btSwitch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:theme="@style/SCBSwitch" />

</LinearLayout>




    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Rel1"
        android:background="#FF5722"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        android:text="@string/show_paired_device" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:background="#FF5722"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPair"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/search_for_device" />


</RelativeLayout>
