<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgnew3"
    android:longClickable="false"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".activity.HomeActivity">

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:background="@drawable/header_shape">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/ordere"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
 >


        <LinearLayout
            android:id="@+id/layout_merchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/_5sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/carview_merchant_app"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:onClick="openMerchantApp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bg"
                    android:contentDescription="@string/merchant_app"
                    android:src="@drawable/merchant_app_logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/merchant"
                android:textColor="#DA3501"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout

            android:id="@+id/layout_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            >


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:onClick="openWalletApp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bg"
                    android:contentDescription="@string/wallet"
                    android:padding="10dp"
                    android:src="@drawable/wallet_app_logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wallet"
                android:textColor="#DA3501"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_merchant2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/_5sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/carview_merchant_app2"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:onClick="openMerchantApp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bg"
                    android:contentDescription="@string/merchant_app"
                    android:src="@drawable/merchant_app_logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/merchant"
                android:textColor="#DA3501"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/layout_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/_5sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bg"
                    android:contentDescription="@string/settings"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_settings_24" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/settings"
                android:textColor="#DA3501"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bg"
                    android:contentDescription="@string/settings"
                    android:padding="20dp"
                    android:src="@drawable/ic_baseline_download_24" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/update_app"
                android:textColor="#DA3501"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:background="@drawable/footer_shape">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_16ssp"
                app:drawableLeftCompat="@drawable/ic_baseline_email_24"
                tools:ignore="UseCompatTextViewDrawableXml" />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_call_24"
                android:drawableLeft="@drawable/ic_baseline_call_24"
                android:drawablePadding="8dp"
                android:text="@string/phone"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_16ssp"
                app:drawableLeftCompat="@drawable/ic_baseline_call_24"
                tools:ignore="UseCompatTextViewDrawableXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/web_address"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_16ssp"
                app:drawableLeftCompat="@drawable/ic_baseline_language_24" />

            <TextView

                android:id="@+id/version_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>